# mandev

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  Makefile  docker-compose.yml  index.html  justfile  package-lock.json  package.json  pyproject.toml  wrangler.toml
.claude/: ralph-loop.local.md
api/: piccolo_conf.py  pyproject.toml
api/mandev_api/: app.py  auth.py  config.py  database.py  db_models.py  devto_fetcher.py  github_fetcher.py  github_service.py  hashnode_fetcher.py  integration_service.py  npm_fetcher.py  piccolo_app.py  pypi_fetcher.py  tables.py
api/mandev_api/piccolo_migrations/: mandev_api_2026_02_22t11_27_11_771658.py
api/mandev_api/routers/: auth.py  github_oauth.py  profile.py
api/tests/: __init__.py  conftest.py  test_auth.py  test_github_fetcher.py  test_github_oauth.py  test_github_service.py  test_health.py  test_profile.py  test_views.py
cli/: pyproject.toml
cli-npm/: package-lock.json  package.json
cli-npm/src/: api.ts  auth.ts  config.ts  doctor.ts  index.ts  loader.ts  render.ts  schema.ts
cli-npm/src/commands/: diff.ts  doctor.ts  export-json.ts  init.ts  login.ts  preview.ts  push.ts  validate.ts  whoami.ts
cli/mandev_cli/: config.py  main.py
cli/tests/: test_commands.py  test_diff.py  test_doctor.py  test_export_json.py  test_init.py  test_preview.py
core/: pyproject.toml
core/mandev_core/: __init__.py  github_models.py  integration_models.py  models.py  parser.py
core/tests/: test_github_models.py  test_models.py  test_parser.py
core/tests/fixtures/: invalid.toml  valid.toml  valid.yaml
db/: schema.sql
docs/: features.md  mandev-concept.md
docs/plans/: 2026-02-13-mvp-design.md  2026-02-13-mvp-implementation.md  2026-02-14-curl-output-and-svg-card-design.md  2026-02-14-curl-output-and-svg-card.md  2026-02-14-seed-data-and-github-stats-design.md  2026-02-14-seed-data-and-github-stats-implementation.md  2026-02-16-social-proof-design.md
functions/api/: _middleware.ts
functions/api/auth/: login.ts  me.ts  signup.ts
functions/api/links/: [id].ts  index.ts
functions/api/pages/: [id].ts  index.ts
functions/api/profile/: [slug].ts
functions/api/stripe/: checkout.ts  webhook.ts
scripts/: seed.py
src/: App.tsx  main.tsx  theme.ts  types.ts
src/components/: ContributionHeatmap.tsx  Logo.tsx  Navbar.tsx
src/context/: AuthContext.tsx
src/pages/: Analytics.tsx  Dashboard.tsx  Directory.tsx  Editor.tsx  Hiring.tsx  Landing.tsx  Login.tsx  Pricing.tsx  Profile.tsx  Settings.tsx  Signup.tsx
web/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
web/src/components/: AuthForm.tsx  AuthNav.tsx  DashboardNav.tsx  DiffToggle.tsx  Editor.tsx  HoverPixelAvatar.tsx  ModeToggle.tsx  PixelAvatar.tsx  SkillBar.astro  TerminalBox.astro  TerminalButton.astro  TerminalInput.tsx  TerminalNav.astro  ThemeSwitcher.tsx  TypeWriter.tsx
web/src/layouts/: BaseLayout.astro
web/src/lib/: ansi.ts  api.ts  schemes.ts
web/src/pages/: [username].astro  [username].json.ts  [username].png.ts  [username].svg.ts  [username].txt.ts  dashboard.astro  index.astro  login.astro  (+1 more)
(+1 files in other folders)
