[project]
name = "mandev"
version = "0.1.0"
description = "man.dev — your manual, as a developer"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["core", "api", "cli"]

[tool.uv.sources]
mandev-core = { workspace = true }
mandev-api = { workspace = true }
mandev-cli = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["core/tests", "api/tests", "cli/tests"]
pythonpath = ["core", "api", "cli"]

[dependency-groups]
dev = [
    "mandev-core",
    "mandev-api",
    "mandev-cli",
    "pytest>=9.0.2",
    "anyio[trio]>=4.0",
    "anyio>=4.0",
    "pytest-anyio",
    "httpx>=0.28",
    "aiosqlite>=0.20",
]
