[project]
name = "mandev-cli"
version = "0.1.0"
description = "CLI for man.dev"
requires-python = ">=3.12"
dependencies = [
    "mandev-core",
    "typer>=0.15",
    "rich>=13.0",
    "httpx>=0.28",
]

[project.scripts]
mandev = "mandev_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mandev_cli"]
