[project]
name = "mandev-core"
version = "0.1.0"
description = "Shared models and config parser for man.dev"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mandev_core"]
